# Condenser-retrieval

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docker/: Dockerfile.api  docker-compose.yml
src/: __init__.py  config.py
src/api/: __init__.py  schemas.py  server.py
src/data/: create_demo_data.py  datasets.py  preprocess.py
src/index/: __init__.py  build_faiss.py  build_index.py  search_faiss.py  search_index.py
src/models/: __init__.py  condenser.py  losses.py  pooling.py
src/training/: eval_retrieval.py  train_contrastive.py
src/ui/: app.js  index.html  styles.css
